--- a/index.html
+++ b/index.html
@@ -6,17 +6,38 @@
     <title>Deezer QR Scanner</title>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <style>
-        body {
-            font-family: sans-serif;
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            background: #111;
             text-align: center;
-            padding: 2em;
-            background-color: #f4f4f4;
+            color: white;
+            font-family: sans-serif;
+            height: 100vh;
+            overflow: hidden;
         }
 
+        #scanner,
+        /* #player {
+            position: absolute;
+            inset: 0;
+            display: none;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        } */
+
+        /* #scanner.active,
+        #player.active {
+            display: flex;
+        } */
+        /* 
         #qr-reader {
-            width: 300px;
-            margin: auto;
-        }
+            width: 100%;
+            max-width: 400px;
+        } */
 
         audio {
             margin-top: 1em;
@@ -25,30 +46,34 @@
 </head>
 
 <body>
-    <h1>Deezer QR Scanner</h1>
+    <h1>QR-Song Game</h1>
     <div id="qr-reader"></div>
-    <p id="status">Scanne einen Deezer QR-Code…</p>
+    <p id="status">Scanne einen QR-Code…</p>
     <audio id="audio" controls autoplay></audio>
 
     <script>
-        const audioElement = document.getElementById('audio');
         const statusElement = document.getElementById('status');
+        const audioElement = document.getElementById('audio');
 
         function extractDeezerTrackId(url) {
             const match = url.match(/deezer\.com\/track\/(\d+)/);
             return match ? match[1] : null;
         }
 
-        async function fetchDeezerPreview(trackId) {
-            try {
-                const response = await fetch(`https://api.deezer.com/track/${trackId}?output=jsonp`);
-                const text = await response.text();
-                const json = JSON.parse(text.replace(/^.+?\(/, '').replace(/\);?$/, ''));
-                return json.preview;
-            } catch (error) {
-                console.error('Fehler beim Abrufen der Preview:', error);
-                return null;
-            }
+        function fetchDeezerJsonp(trackId) {
+            const callbackName = `deezerCallback_${trackId}`;
+            return new Promise((resolve, reject) => {
+                window[callbackName] = function (data) {
+                    resolve(data);
+                    delete window[callbackName];
+                    script.remove();
+                };
+
+                const script = document.createElement('script');
+                script.src = `https://api.deezer.com/track/${trackId}?output=jsonp&callback=${callbackName}`;
+                script.onerror = () => reject(new Error("Script-Fehler bei Deezer-API"));
+                document.body.appendChild(script);
+            });
         }
 
         async function handleScanSuccess(decodedText) {
@@ -57,36 +82,36 @@
                 return;
             }
 
-            statusElement.textContent = `Track-Link erkannt: ${decodedText}`;
             const trackId = extractDeezerTrackId(decodedText);
-
             if (!trackId) {
                 statusElement.textContent = "Track-ID konnte nicht extrahiert werden.";
                 return;
             }
 
-            statusElement.textContent = `Lade Preview für Track ${trackId}…`;
-            const previewUrl = await fetchDeezerPreview(trackId);
+            statusElement.textContent = `Lade Track #${trackId}…`;
 
-            if (previewUrl) {
-                audioElement.src = previewUrl;
-                audioElement.play();
-                statusElement.textContent = "Preview wird abgespielt.";
-            } else {
-                statusElement.textContent = "Preview konnte nicht geladen werden.";
+            try {
+                const trackData = await fetchDeezerJsonp(trackId);
+                if (trackData.preview) {
+                    audioElement.src = trackData.preview;
+                    audioElement.play();
+                    // statusElement.textContent = `Spiele: ${trackData.title} – ${trackData.artist.name}`;
+                    statusElement.textContent = "";
+                } else {
+                    statusElement.textContent = "Keine Vorschau verfügbar.";
+                }
+            } catch (err) {
+                console.error(err);
+                statusElement.textContent = "Fehler beim Laden der Track-Daten.";
             }
         }
 
+        // QR-Scanner starten
         new Html5Qrcode("qr-reader").start(
             { facingMode: "environment" },
-            {
-                fps: 10,
-                qrbox: 250
-            },
+            { fps: 10, qrbox: 800 },
             handleScanSuccess,
-            (errorMessage) => {
-                // Fehler beim Scannen ignorieren
-            }
+            (errorMessage) => { /* Fehler ignorieren */ }
         );
     </script>
 </body>
